# self-chain-public

./: .cloudflare-deploy-trigger  .env.example  .gitattributes  .gitignore  ALGOLIA_SETUP.md  BUILD.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOY_INSTRUCTIONS.md  Gemfile  LICENSE  MIGRATION_STATUS.md  PRIVATE_DEPENDENCIES.md  README-DOCS.md  README.md  README_PUBLIC_REPO.md  REPOSITORY_RESTRUCTURE_SUMMARY.md  SDK-MCP-thoughts.md  SDK_STRUCTURE.md  SECURITY.md  SECURITY.md.bak  SELF_STUDIO_STRATEGY.md  TASK_PRIORITIZATION_MATRIX.md  _config.yml  about.md  branch-protection-update.json  build.gradle  build.gradle.min  build.sh  clean-all-jekyll-syntax.sh  delete-cf-project-force.sh  delete-cloudflare-deployments.sh  documentation.md  docusaurus.config.js  fix-links.js  gradlew  hardhat.config.js  (+21 more)
.agent-os/: ARCHITECTURE.md  DEVELOPMENT.md  PRODUCT.md  README.md  SPEC.md
.agent-os/dev-resources-strategy/: README.md  crabnebula-strategy.md  github-communities-strategy.md  implementation-roadmap.md  partnership-opportunities.md  rust-ecosystem-strategy.md  tauri-community-strategy.md
.cargo/: audit.toml
.claude/: instructions.md
.docusaurus/: client-manifest 2.json  client-manifest.json  client-modules.js  docusaurus.config 2.mjs  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/: CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci.yml  cloudflare-pages.yml  codeql-analysis.yml  deploy-docs.yml  deploy-docusaurus.yml  docs-validation.yml  jekyll-gh-pages.yml  security.yml  test-snyk.yml
_data/: navigation.yml
_includes/: my-head.html
_sass/: my-style.scss
_sass/color_schemes/: custom.scss  self.scss
_sass/custom/: custom.scss
assets/css/: custom.scss  hydejack-9.scss  main.scss
build 2/: 404 2.html  404.html  index 2.html  index.html  sitemap.xml
build 2/Building-on-SELF/: index.html
build 2/Developing SELF/: index.html
build 2/project-status/: index.html
config/: benchmark_config.yaml  network-config.example 2.toml  node-config.example 2.toml  production.env 2.example  production.env.example  testnet.example.toml
contracts/: README.md  SELFBonusStaking.sol  SELFOracle.sol  SELFToken.sol  SELFVesting.sol
contracts/interfaces/: ISELFToken.sol
deployment/public-demos/: aws-demo.sh
docs/: AI_CAPACITY_IMPLEMENTATION.md  ARCHITECTURE.md  BUILDING.md  COINBASE_INTEGRATION.md  Getting_Started_Testnet.md  PROJECT_STATUS.md  PUBLIC_INTERFACES.md  README.md  SECURITY.md  _config.yml  about-self.md  architecture.md  development.md  erd_overview.md  erd_overview_v2.md  erd_overview_v3.mmd  erd_overview_v3.puml  index.md  network_architecture.md  security-privacy.md
docs/API/: API_documentation.md
docs/About SELF/: Media Coverage.md  _category_.json  creation-brand.md  evolution.md  long-term.md  self-sov-alternative.md
docs/Architecture/: B2B_Constellation_Architecture.md  Constellation_Architecture.md  Enterprise_Constellation_Architecture.md  SELF_Chain_Architecture.md  Super_App_OS_Evolution.md
docs/Building-on-SELF/: _category_ 2.json  _category_.json  _index-backup.md  cloud-integration 2.md  cloud-integration.md  getting-started.md  index.md  sdk-structure.md
docs/Constellation/: Industry_Validation_Rules.md  Overview.md  Regulatory_Compliance.md
docs/Contributing/: _category_.json  code-of-conduct.md  contributors.md  governance.md  index.md  sdk-structure.md
docs/Developing SELF/: _category_.json  code-of-conduct.md  governance.md  index.md  security.md
docs/Development/: Code_Style_Guide.md  Testing_Requirements.md
docs/ERD/: ERD_Overview.md  ERD_Overview_v2.md
docs/Getting Started/: _category_.json
docs/Governance/: AI_training_system.md  Ai_training_system.md  Governance_Implementation.md
docs/Grid Compute/: Business_Model.md  Competitive_Advantages.md  Overview.md  User_Journey.md
docs/History/: IMPLEMENTATION_HISTORY.md  Implementation_History.md  Index.md
docs/Integration/: Coinbase_Integration.md  Rosetta_ERC20_Integration.md
docs/Media Coverage/: Podcasts.md  Press Releases.md  _category_.json
docs/Minima/: backward_compatibility.md
docs/Monitoring/: Monitoring_and_Alerting.md
docs/Nillion/: NodeInitialization.md  README.md
docs/Our Purpose/: Media Coverage.md  _category_.json  evolution 2.md  long-term.md  self-sov-alternative.md
docs/Performance/: Advanced_TPS_Optimization.md  TPS_Optimization.md
docs/PoAI/: Taxonomy.md
docs/Project Status/: _category_.json
docs/Rewards/: Dashboard.md  Reward_System.md  Stake_and_Participation.md
docs/Roadmap/: Beta Web App.md  SDK.md  (+6 more)
docusaurus/: .env.example  ALGOLIA_SETUP.md  INSTALLATION_COMPLETE.md  MOBILE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PWA_SETUP_COMPLETE.md  README.md  algolia.env.txt  check-404-links.js  docusaurus.config 2.js  docusaurus.config.full 2.js  docusaurus.config.full.js  docusaurus.config.js  docusaurus.config.minimal.js  nodemon.json  package 2.json  package-lock.json  package.json  sidebars.js  test-all-pages.js  webpack-fix-plugin 2.js  wrangler.toml
fonts/: README.md
interfaces/: README.md
mdbook-poc/: book.toml
scripts/: deploy.js  safe-start.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
selfswap/: .cfignore  .env.example  .gitignore  build.sh  cloudflare-pages.json  cloudflare.toml  headers.js  middleware.ts  minimal.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  test.js
src/: benchmark.rs  benchmark_metrics.rs  benchmark_report.rs  benchmark_scenarios.rs  benchmark_suite.rs  lib 2.rs  lib.rs  visualization.rs
static/: _headers  _redirects  manifest.json  robots.txt
test-deploy/: README.md  cloudflare-pages.json
tests/: hybrid_storage_test.rs  security_tests.rs
tokencreator/: README.md
tokencreator-pages/: README.md  index.html  pages.json  styles.css  tailwind.config.js
(+1500 files in other folders)
