[package]
name = "self-sdk"
version = "0.1.0"
authors = ["SELF Technology <devs@self.app>"]
edition = "2021"
description = "SELF Chain Rust SDK - Build AI-native applications on SELF"
license = "MIT"
repository = "https://github.com/SELF-Technology/self-chain-public"
documentation = "https://docs.self.app"
keywords = ["self", "blockchain", "sdk", "ai", "mcp"]
categories = ["api-bindings", "cryptography", "network-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
url = "2.5"
websocket = "0.27"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["websocket"]
websocket = []